🔨 REFACTOR MVC 🔨 (#2)